[gd_scene load_steps=16 format=3 uid="uid://5gk7k6wlo3mu"]

[ext_resource type="Script" uid="uid://86atwevst2qj" path="res://Scenes/Confrontation/confrontation.gd" id="1_qjcwl"]
[ext_resource type="Script" uid="uid://b80ulirlqm1uq" path="res://Scenes/CardSlot/card_slot.gd" id="2_5uyoj"]
[ext_resource type="PackedScene" uid="uid://da05cm8dyj15s" path="res://Scenes/CardSlot/CardSlot.tscn" id="2_7y0vx"]
[ext_resource type="Texture2D" uid="uid://crqq4ieqv4x3u" path="res://Assets/Textures/Other/Cancelled.png" id="3_n4vd6"]

[sub_resource type="LabelSettings" id="LabelSettings_n4vd6"]
font_size = 32
font_color = Color(1, 1, 0, 1)
outline_size = 6
outline_color = Color(1, 0.52549, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6rqbp"]
font_size = 48
font_color = Color(1, 0.614407, 0.036115, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ka2uo"]
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7y0vx"]
font_size = 48
font_color = Color(1, 0, 0, 1)
outline_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_vu2pe"]
font_size = 92
font_color = Color(0.0438008, 0.524369, 1, 1)
outline_size = 21
outline_color = Color(0, 0, 0.647059, 1)

[sub_resource type="LabelSettings" id="LabelSettings_b1jww"]
font_size = 48
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_3mbjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPanel/WeaponDefence:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16.5, 51.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyPanel/EnemyAttack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16.5, 51.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyPanel/EnemyAttack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponPanel/WeaponDefence:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponPanel/WeaponDefence:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyPanel/EnemyAttack:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AttackResult:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AttackResult:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WeaponPanel/TextureRect:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("WeaponPanel/TextureRect:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("WeaponPanel/TextureRect:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("WeaponPanel/CancelWeapon:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("WeaponPanel/CancelWeapon:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-75.5, 62.5)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("WeaponPanel/CancelWeapon:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7y0vx"]
resource_name = "cancel_weapon"
length = 2.6
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPanel/TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponPanel/TextureRect:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.349066, 0.349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WeaponPanel/TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyPanel/EnemyAttack:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5013, 1, 1.5, 1.8),
"transitions": PackedFloat32Array(0.216, 1, 2, 1),
"update": 0,
"values": [Vector2(16.5, 51.5), Vector2(16.5, 200), Vector2(16.5, 200), Vector2(-200, 200)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyPanel/EnemyAttack:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 1, 1.5, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyPanel/EnemyAttack:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.5, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.174533]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AttackResult:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.8, 1.9, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AttackResult:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.8, 1.9, 2.49, 2.57),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WeaponPanel/CancelWeapon:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("WeaponPanel/CancelWeapon:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-75.5, 62.5), Vector2(-75.5, 200)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("WeaponPanel/CancelWeapon:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_vu2pe"]
resource_name = "fight_with_weapon"
length = 2.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPanel/WeaponDefence:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(0.217638, 1, 2, 1),
"update": 0,
"values": [Vector2(16.5, 51.5), Vector2(16.5, 200), Vector2(16.5, 200), Vector2(210, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyPanel/EnemyAttack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(0.217, 1, 2, 1),
"update": 0,
"values": [Vector2(16.5, 51.5), Vector2(16.5, 200), Vector2(16.5, 200), Vector2(-200, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyPanel/EnemyAttack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponPanel/WeaponDefence:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponPanel/WeaponDefence:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.174533]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyPanel/EnemyAttack:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.174533]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AttackResult:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.3, 1.4, 1.6),
"transitions": PackedFloat32Array(0.1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AttackResult:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.3, 1.4, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_b1jww"]
resource_name = "fight_without_weapon"
length = 2.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPanel/WeaponDefence:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(0.217638, 1, 2, 1),
"update": 0,
"values": [Vector2(16.5, 51.5), Vector2(16.5, 200), Vector2(16.5, 200), Vector2(210, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemyPanel/EnemyAttack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(0.217, 1, 2, 1),
"update": 0,
"values": [Vector2(16.5, 51.5), Vector2(16.5, 200), Vector2(16.5, 200), Vector2(-200, 200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyPanel/EnemyAttack:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WeaponPanel/WeaponDefence:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 3, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WeaponPanel/WeaponDefence:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.174533]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EnemyPanel/EnemyAttack:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.174533]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AttackResult:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1.3, 1.4, 1.6),
"transitions": PackedFloat32Array(0.1, 1, 1),
"update": 0,
"values": [0.0, -0.523599, 0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AttackResult:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1.3, 1.4, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ctq5q"]
_data = {
&"RESET": SubResource("Animation_3mbjx"),
&"cancel_weapon": SubResource("Animation_7y0vx"),
&"fight_with_weapon": SubResource("Animation_vu2pe"),
&"fight_without_weapon": SubResource("Animation_b1jww")
}

[node name="Confrontation" type="Node2D"]
script = ExtResource("1_qjcwl")
CARD_SLOT_SCENE = ExtResource("2_7y0vx")

[node name="WeaponPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -85.0
offset_right = -135.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="WeaponPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.5
offset_top = -50.0
offset_right = 63.5
offset_bottom = -5.0
grow_horizontal = 2
text = "Weapon"
label_settings = SubResource("LabelSettings_n4vd6")
horizontal_alignment = 1

[node name="WeaponDefence" type="Label" parent="WeaponPanel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -33.5
offset_right = 48.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48.5, 33.5)
text = "0"
label_settings = SubResource("LabelSettings_6rqbp")
horizontal_alignment = 1

[node name="Weapon" type="Node2D" parent="WeaponPanel"]
position = Vector2(65, 85)
script = ExtResource("2_5uyoj")

[node name="CancelWeapon" type="Label" parent="WeaponPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.5
offset_top = -22.5
offset_right = 140.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "Enemy too strong!"
label_settings = SubResource("LabelSettings_ka2uo")

[node name="TextureRect" type="TextureRect" parent="WeaponPanel"]
visible = false
layout_mode = 2
offset_left = 33.0
offset_top = 53.0
offset_right = 97.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_n4vd6")

[node name="EnemyPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 135.0
offset_top = -85.0
offset_right = 265.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -63.5
offset_top = -50.0
offset_right = 63.5
offset_bottom = -5.0
grow_horizontal = 2
text = "Enemy"
label_settings = SubResource("LabelSettings_n4vd6")
horizontal_alignment = 1

[node name="Enemy" type="Node2D" parent="EnemyPanel"]
position = Vector2(65, 85)
script = ExtResource("2_5uyoj")

[node name="EnemyAttack" type="Label" parent="EnemyPanel"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -33.5
offset_right = 48.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48.5, 33.5)
text = "0"
label_settings = SubResource("LabelSettings_7y0vx")
horizontal_alignment = 1

[node name="SlayedEnemies" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -85.0
offset_right = -292.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="VS" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.5
offset_top = -63.0
offset_right = 65.5
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "V S"
label_settings = SubResource("LabelSettings_vu2pe")
horizontal_alignment = 1

[node name="AttackResult" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.5
offset_top = 110.0
offset_right = 27.5
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(26.5, 33)
text = "10"
label_settings = SubResource("LabelSettings_b1jww")
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ctq5q")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
